--- a/httpserver/output/webroot/home/index.html
+++ b/httpserver/output/webroot/home/index.html
@@ -94,7 +94,6 @@
                 <h1 class="title">末人</h1>
                 <h2 class="title_h2">微如毫末，愚不可及</h2>
                 <div id="box01_text">
-                    <p class="box01_p">一个死宅.</p>
                     <p class="box01_p">一个npc.</p>
                 </div>
             </div>
@@ -108,13 +107,11 @@
 
             <div class="box02_content box_content">
                 <div id='bar_container' class="bar_container">
-                    <div class='bar mint' data-percent='50' data-skill='C'></div>
+                    <div class='bar lila' data-percent='50' data-skill='C/C++'></div>
                     <div class='bar red' data-percent='50' data-skill='数据结构算法'></div>
-                    <div class='bar lila' data-percent='50' data-skill='C++'></div>
                     <div class='bar orange' data-percent='40' data-skill='Linux'></div>
-                    <div class='bar gray' data-percent='90' data-skill='游戏'></div>
-                    <div class="bar blue" data-percent='70' data-skill='睡觉'></div>
-                    <div class="bar green" data-percent='80' data-skill='动漫'></div>
+                    <div class="bar blue" data-percent='40' data-skill='MySQL'></div>
+                    <div class='bar gray' data-percent='90' data-skill='Game'></div>
                 </div>
                 <div id="box02_text">
                     <h1>About Skill</h1>
@@ -135,17 +132,15 @@
 
         <div class="box">
             <img class="box_bg" src="home/images/upload/pic_3.jpg">
-
             <div class="box_content box03_content">
                 <ul id="timeUl" class="timeUl">
                     <li>
                         <div>
-                            <h1>1914-1918</h1>
-                            <p>欧洲</p>
-                            <p>职业：通讯兵</p>
-                            <p>当年我在一战期间，不顾生死</p>
-                            <p>生与死，轮回不止
-                            <p>
+                            <h1>?-2023</h1>
+							<p>未知</p>
+                            <p>职业:未知</p>
+                            <p>档案丢失</p>
+                            <p>......</p>
                         </div>
                     </li>
                     <li>
@@ -153,23 +148,13 @@
                             <h1>2023-2077</h1>
                             <p>夜之城</p>
                             <p>职业：雇佣兵</p>
-                            <p>那些年，和强尼-银手无恶不作</p>
-                            <p>牛逼呀, V</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <h1>琥珀纪2157-Now</h1>
-							<p>职业：无名客</p>
-                            <p>星穹铁道列车的一员</p>
-                            <p>银河棒球侠，开拓星海</p>
-                            <p>励志翻遍所到之处的所有垃圾桶</p>
+                            <p>无恶不作</p>
                         </div>
                     </li>
                     <li>
                         <div>
                             <h1>Future</h1>
-                            <p>将行此刻，不问将来</p>
+                            <p>当行此刻，不问将来</p>
                             <p>...</p>
                         </div>
                     </li>
@@ -220,7 +205,7 @@
                                 <img src="home/images/upload/acg.png">
                             </div>
                             <div class="hobby_img_info">
-                                <h2>game</h2>
+                                <h1>game</h1>
                             </div>
                         </div>
                         <div class="hobby_text_div">
@@ -230,7 +215,7 @@
                             <p class="about_p">
                             </p>
                             <p>
-                                故事，一个又一个的故事，故事结束之后又是新的故事。
+                                故事,生活的比喻
                             </p>
                         </div>
                     </li>
@@ -241,15 +226,15 @@
                                 <img src="home/images/upload/reading.jpg">
                             </div>
                             <div class="hobby_img_info">
-                                <h2>没了&不写了</h2>
+                                <h1>没了</h1>
                             </div>
                         </div>
                         <div class="hobby_text_div">
                             <div class="hobby_img_info_mob">
-                                <h1><a>没了&不写了</a></h1>
+                                <h1><a>没了</a></h1>
                             </div>
                             <p class="about_p">
-                                就这样吧，累了。
+                                就这样吧，累了
                             </p>
                         </div>
                     </li>
@@ -294,9 +279,9 @@
             </div>
             <div class="foot_power">
                 <h3>©2024 made
-                    <a href="home/404.html" title="Night" target="_blank"> 借用：</a>
-                    <a href="home/404.html" title="IceEnd">黑夜主权的前端模板</a>
-                    <a href="home/404.html" title="beian" target="_blank">thanks</a>
+                    <a title="Night" target="_blank"> 借用：</a>
+                    <a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&rsv_idx=1&tn=baidu&wd=%E9%BB%91%E5%A4%9C%E4%B8%BB%E6%9D%83%20%E6%A8%A1%E6%9D%BF" title="IceEnd">黑夜主权的前端模板</a>
+                    <a target="_blank">thanks</a>
                 </h3>
             </div>
         </foot>
