--- a/httpserver/webroot/index.html
+++ b/httpserver/webroot/index.html
@@ -4,5 +4,8 @@
         <h1>  "test html"  </h1>
         <h2>  "hello world"  </h2>
         <h3>  "你好,嗯"  </h3>
+
+        <br>
+        <a href="register.html" target="_blank">注册账号!</a>
     </body>
 </html>
