留言板功能code...

--- a/httpserver/output/webroot/index.html
+++ b/httpserver/output/webroot/index.html
@@ -7,5 +7,6 @@
 
         <br>
         <a href="register.html" target="_blank">注册账号!</a>
+        <a href="littleComment/littleComment.html" target="_blank">留言板</a>
     </body>
 </html>
