--- a/httpserver/output/webroot/404.html
+++ b/httpserver/output/webroot/404.html
@@ -2,5 +2,7 @@
 <head> <meta charset="utf-8"> </head>
     <body>  
         <h1>  "404 Not Find!"  </h1>
+        <br>
+        <img src="404.jpg" alt="Big Boat">
     </body>
 </html>
