资源访问错误bug修复,html资源依据相对自己所在路径

--- a/httpserver/output/webroot/home/index.html
+++ b/httpserver/output/webroot/home/index.html
@@ -16,9 +16,9 @@
     <meta name="author" content="cononico">
     <meta name="application-name" content="Cononico">
 
-    <link rel="stylesheet" type="text/css" href="home/css/main.css">
-    <link rel="stylesheet" type="text/css" href="home/css/process.css">
-    <link rel="shortcut icon" type="image/x-icon" href="home/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/process.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
     <script type="text/javascript">
         //设定rem值
@@ -29,7 +29,7 @@
 <body>
     <header class="head">
         <div class="head_logo_div">
-            <img class="logo_img" src="home/images/upload/head.jpg"></a>
+            <img class="logo_img" src="images/upload/head.jpg"></a>
         </div>
         <div class="head_nav_div">
             <nav class="head_nav">
@@ -54,7 +54,7 @@
 
     <div class="wrapBox" id="wrapBox">
         <div class="box">
-            <img class="box_bg" src="home/images/upload/pic_0.jpg">
+            <img class="box_bg" src="images/upload/pic_0.jpg">
             <div class="box01_content">
                 <div class="head_div">
                     <div class="cycle_item">
@@ -78,13 +78,13 @@
                         </a>
 
                         <div class="green_cycle">
-                            <img class="green_cycle_img" src="home/images/icon/green_cycle.png">
+                            <img class="green_cycle_img" src="images/icon/green_cycle.png">
                             <div class="yellow_cycle">
-                                <img class="yellow_cycle_img" src="home/images/icon/yellow_cycle.png">
+                                <img class="yellow_cycle_img" src="images/icon/yellow_cycle.png">
                                 <div class="blue_cycle">
-                                    <img class="blue_cycle_img" src="home/images/icon/blue_cycle.png">
+                                    <img class="blue_cycle_img" src="images/icon/blue_cycle.png">
                                     <div class="head_img_div">
-                                        <img class="head_img" src="home/images/upload/head.jpg">
+                                        <img class="head_img" src="images/upload/head.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -98,12 +98,12 @@
                 </div>
             </div>
             <div class="arrow_div">
-                <img class="arrow_img" src="home/images/icon/arrowhead.png">
+                <img class="arrow_img" src="images/icon/arrowhead.png">
             </div>
         </div>
 
         <div class="box">
-            <img class="box_bg" src="home/images/upload/pic_2.jpg">
+            <img class="box_bg" src="images/upload/pic_2.jpg">
 
             <div class="box02_content box_content">
                 <div id='bar_container' class="bar_container">
@@ -125,13 +125,13 @@
             </div>
 
             <div class="arrow_div">
-                <img class="arrow_img" src="home/images/icon/arrowhead.png">
+                <img class="arrow_img" src="images/icon/arrowhead.png">
             </div>
 
         </div>
 
         <div class="box">
-            <img class="box_bg" src="home/images/upload/pic_3.jpg">
+            <img class="box_bg" src="images/upload/pic_3.jpg">
             <div class="box_content box03_content">
                 <ul id="timeUl" class="timeUl">
                     <li>
@@ -160,21 +160,21 @@
                     </li>
                 </ul>
                 <div class="left_div" id="left_div">
-                    <img class="left_arrow" src="home/images/icon/arrowleft.png">
+                    <img class="left_arrow" src="images/icon/arrowleft.png">
                 </div>
                 <div class="right_div" id="right_div">
-                    <img class="right_arrow" src="home/images/icon/arrowright.png">
+                    <img class="right_arrow" src="images/icon/arrowright.png">
                 </div>
             </div>
 
             <div class="arrow_div">
-                <img class="arrow_img" src="home/images/icon/arrowhead.png">
+                <img class="arrow_img" src="images/icon/arrowhead.png">
             </div>
         </div>
 
         <div class="box">
 
-            <img class="box_bg" src="home/images/upload/pic_4.jpg">
+            <img class="box_bg" src="images/upload/pic_4.jpg">
             <div class="box_content box04_content">
                 <h1 class="box04_title">Something Of Hobby</h1>
                 <ul class="hobby_content">
@@ -182,7 +182,7 @@
                         <div class="hobby_img_div">
                             <div class="spinner spinner_01"></div>
                             <div class="hobby_img">
-                                <img src="home/images/upload/kapok.jpg">
+                                <img src="images/upload/kapok.jpg">
                             </div>
                             <div class="hobby_img_info">
                                 <h1>宅</h1>
@@ -202,7 +202,7 @@
                         <div class="hobby_img_div">
                             <div class="spinner spinner_02"></div>
                             <div class="hobby_img">
-                                <img src="home/images/upload/acg.png">
+                                <img src="images/upload/acg.png">
                             </div>
                             <div class="hobby_img_info">
                                 <h1>game</h1>
@@ -223,7 +223,7 @@
                         <div class="hobby_img_div">
                             <div class="spinner spinner_03"></div>
                             <div class="hobby_img">
-                                <img src="home/images/upload/reading.jpg">
+                                <img src="images/upload/reading.jpg">
                             </div>
                             <div class="hobby_img_info">
                                 <h1>没了</h1>
@@ -242,7 +242,7 @@
                 </ul>
             </div>
             <div class="arrow_div">
-                <img class="arrow_img" src="home/images/icon/arrowhead.png">
+                <img class="arrow_img" src="images/icon/arrowhead.png">
             </div>
         </div>
 
@@ -258,22 +258,22 @@
 
                     </li>
                     <li class="email_items">
-                        <a href="home/404.html" target="_blank">邮箱</a>
+                        <a href="404.html" target="_blank">邮箱</a>
                     </li>
                     <div class="clear"></div>
                 </ul>
                 <div class="qrcode_div">
                     <span class="weixin">
                         <a class="weixin_icon"></a>
-                        <img class="weixin_img" src="home/images/upload/weixin_qr.png">
+                        <img class="weixin_img" src="images/upload/weixin_qr.png">
                     </span>
                     <span class="dingding">
                         <a class="dingding_icon"></a>
-                        <img class="dingding_img" src="home/images/upload/dingding_qr.png">
+                        <img class="dingding_img" src="images/upload/dingding_qr.png">
                     </span>
                     <span class="qq">
                         <a class="qq_icon"></a>
-                        <img class="qq_img" src="home/images/upload/qq_qr.jpg">
+                        <img class="qq_img" src="images/upload/qq_qr.jpg">
                     </span>
                 </div>
             </div>
@@ -286,7 +286,7 @@
             </div>
         </foot>
     </div>
-    <script type="text/javascript" src="home/js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
