--- a/httpserver/webroot/index.html
+++ b/httpserver/webroot/index.html
@@ -37,7 +37,7 @@
             <h3>  "hello world."  </h3>
             <h3>  "and hello, visiter."  </h3>
             <p>。。。</p>
-            <a href="home" target="_blank" class="blue-link">个人主页</a>
+            <a href="home/index.html" target="_blank" class="blue-link">个人主页</a>
             <br>
             <a href="littleComment/littleComment.html" target="_blank" class="blue-link">留言板</a>
             <p>。。。</p>
