--- a/httpserver/webroot/littleComment/littleComment.html
+++ b/httpserver/webroot/littleComment/littleComment.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言板</title>
     <!-- 引入 Element UI 样式 -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <!-- 引入 Vue -->
-    <script src="vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <!-- 引入 Element UI -->
-    <script src="index.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <style>
         /* 全局样式 */
 		body {
